--- a/web/src/main/webapp/jquery/24_hide_show.html
+++ b/web/src/main/webapp/jquery/24_hide_show.html
@@ -6,7 +6,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-	<h1>Effect - Hide And Show</h1>
+	<h1>Effect - hide And show</h1>
 	<hr>
 	<button type="button" id="btn1">Hide And Show</button>
 	<button type="button" id="btn2">SlideUp And SlideDown</button>
