--- a/web/src/main/webapp/jquery/25_animate.html
+++ b/web/src/main/webapp/jquery/25_animate.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>jQuery</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-
+	<h1>Effect - animate</h1>
+	<hr>
 </body>
 </html>
