--- a/web/src/main/webapp/jquery/25_animate.html
+++ b/web/src/main/webapp/jquery/25_animate.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <title>jQuery</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 <style>
 #box {
 	width: 150px;
@@ -31,16 +33,53 @@
 	<hr>
 	<div id="box"></div>
 	<button type="button" id="left">◀</button>
-	<button type="button" id="left">▶</button>
+	<button type="button" id="right">▶</button>
 	
+	<script>
+	/*
+	$("#right").click(function() {
+		//태그의 left 스타일 속성값을 반환받아 변수에 저장
+		// => parseInt 함수를 사용하여 [px] 문자값을 제거하고 숫자값만 변수에 저장
+		//alert($("#box").css("left"));
+		var x=parseInt($("#box").css("left"));
+		//alert(x);
+		
+		x+=50;
+		
+		//태그의 left 스타일 속성값을 변수값으로 변경 - 태그 이동
+		$("#box").css("left",x);				
+	});	
+	*/
 	
+	$("#left").attr("disabled","disabled");//태그 비활성화 처리
+	
+	$("#left").click(function() {
+		//선택자로 검색된 태그(select 태그)의 자식태그(option 태그) 중 선택된 태그의 태그내용을
+		//반환받아 변수에 저장
+		var easing=$("#easing").children(":selected").text();
+
+		$("#left").attr("disabled","disabled");//태그 비활성화 처리
+		$("#right").removeAttr("disabled");//태그 활성화 처리
+		
+		//$(selector).animate(properties, duration[, easing][, callback]) : 선택자로 검색된
+		//태그에 애니메이션 효과를 제공하는 메소드
+		// => properties : 태그의 CSS 스타일 속성과 속성값을 Object 객체의 요소로 전달 - 태그의 스타일 변화
+		// => duration : 애니메이션 효과의 적용시간(ms) 전달 - 태그 스타일이 변환되는 시간 
+		// => easing : 애니메이션 효과의 적용속도 전달 - https://easings.net 사이트 참조(jquery-ui 라이브러리 포함)
+		// => callback : 애니메이션 효과 적용 후 실행된 명령이 작성된 함수 전달
+		//$(selector).stop() : 선택자로 검색된 태그에 설정된 애니메이션 효과를 멈추는 메소드
+		$("#box").stop().animate({"left":0}, 3000, easing);
+	});	
+	
+	$("#right").click(function() {
+		var easing=$("#easing").children(":selected").text();
+		
+		$("#right").attr("disabled","disabled");//태그 비활성화 처리
+		$("#left").removeAttr("disabled");//태그 활성화 처리
+		
+		//$(selector).width() : 선택자로 검색된 태그의 폭을 반환하는 메소드
+		$("#box").stop().animate({"left":$(window).width()-170}, 3000, easing);
+	});	
+	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
