--- a/servlet/src/main/webapp/fileupload.html
+++ b/servlet/src/main/webapp/fileupload.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- 사용자로부터 값과 파일을 입력받아 처리페이지(upload.itwill)를 POST 방식으로 요청하여
+<!-- 사용자로부터 문자값과 파일을 입력받아 처리페이지(upload.itwill)를 POST 방식으로 요청하여
 입력값과 입력파일을 전달하는 HTML 문서 -->
 <html>
 <head>
