--- a/servlet/src/main/webapp/fileupload.html
+++ b/servlet/src/main/webapp/fileupload.html
@@ -10,7 +10,7 @@
 	<h1>파일 업로드</h1>
 	<hr>
 	<!-- 웹프로그램 요청시 사용자로부터 입력받은 파일을 전달하기 위해 form 태그 사용 -->
-	<!-- => 사용자로부터 입력된 파일을 웹프로그램에게 전달하기 위해 form 태그의 method 
+	<!-- => 사용자로부터 입력된 파일을 요청한 웹프로그램에게 전달하기 위해 form 태그의 method 
 	속성값을 반드시 [post]로 설정하고 enctype 속성값을 [multipart/form-data] 설정 -->
 	<form action="upload.itwill" method="post" enctype="multipart/form-data">
 	<table>
