--- a/web/src/main/webapp/css/04_format.html
+++ b/web/src/main/webapp/css/04_format.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>CSS</title
+<title>CSS</title>
 <!-- link 태그 : 외부파일을 불러와 파일내용을 HTML 문서에 연결하는 포함하는 기능을 제공하는 태그 -->
 <!-- => CSS 파일을 불러와 HTML 문서에 연결하여 태그에 스타일 시트 적용 -->
-<!-- => CSS 파일에 설정된 스타일을 사이트를 구성하는 모든 HTML 문서에 동일하게 적용하기위해 사용 
+<!-- => CSS 파일에 설정된 스타일을 사이트를 구성하는 모든 HTML 문서에 동일하게 적용하기 위해 사용 
 - 사이트를 구성하는 모든 페이지에 일관성 있는 스타일 적용 : 유지보수의 효율성 증가 -->
 <!-- href 속성 : HTML 문서에 연결할 외부파일의 URL 주소를 속성값으로 설정 -->
 <!-- type 속성 : HTML 문서에 연결할 외부파일의 파일형태(MimeType)를 속성값으로 설정 -->
